@@ -7,6 +7,7 @@ ver 0.22.11 (not yet released)
   - ffmpeg: support double-precision samples (by converting to single precision)
 * Android
   - build with NDK r23
+  - playlist_directory defaults to "/sdcard/Android/data/org.musicpd/files/playlists"
 
 ver 0.22.10 (2021/08/06)
 * protocol
